--- a/UI-UX/index.html
+++ b/UI-UX/index.html
@@ -32,6 +32,29 @@
                     <button type="submit">Login</button>
                     <p id="login-error" class="error-message"></p>
                 </form>
+                <p>Don't have an account? <a href="#" id="show-signup-link">Sign up</a></p>
+            </section>
+
+            <!-- Signup Section -->
+            <section id="signup-section" class="hidden">
+                <h2>Sign Up</h2>
+                <form id="signup-form">
+                    <div>
+                        <label for="signup-username">Username:</label>
+                        <input type="text" id="signup-username" name="signup-username" required>
+                    </div>
+                    <div>
+                        <label for="signup-password">Password:</label>
+                        <input type="password" id="signup-password" name="signup-password" required>
+                    </div>
+                    <div>
+                        <label for="access-code">Access Code:</label>
+                        <input type="text" id="access-code" name="access-code" required>
+                    </div>
+                    <button type="submit">Sign Up</button>
+                    <p id="signup-message" class="status-message"></p>
+                </form>
+                <p>Already have an account? <a href="#" id="show-login-link">Login</a></p>
             </section>
 
             <!-- Upload Section -->
@@ -43,8 +66,12 @@
                         <label for="files">Upload PDF/DOCX files to build/update your RAG:</label>
                         <input type="file" id="files" name="files" multiple accept=".pdf,.docx">
                     </div>
-                    <div id="selected-files-preview" class="selected-files-container"></div> <!-- Added for file preview -->
-                    <button type="submit">Upload Files</button>
+                    <div id="selected-files-preview" class="selected-files-container"></div>
+                    <div>
+                        <label for="custom-instructions">Custom Agent Instructions (Optional):</label>
+                        <textarea id="custom-instructions" name="custom_instructions" rows="4" placeholder="Enter custom instructions for your agent when using this RAG..."></textarea>
+                    </div>
+                    <button type="submit">Upload Files & Instructions</button>
                     <p id="upload-status" class="status-message"></p>
                     <div id="uploaded-files-list"></div>
                     <div id="rejected-files-list"></div>
@@ -62,8 +89,9 @@
                     </div>
                 </form>
                 <div class="navigation-buttons">
-                    <button id="toggle-chat-button" class="nav-button hidden">Chat with Default RAG</button>
-                    <button id="chat-custom-rag-button" class="nav-button hidden">Chat with Custom RAG</button> <!-- New Button -->
+                    <button id="chat-default-rag-button" class="nav-button hidden">Chat with Default RAG</button>
+                    <button id="chat-default-rag-sse-button" class="nav-button hidden">Chat with Default RAG (Show Steps)</button>
+                    <button id="chat-custom-rag-button" class="nav-button hidden">Chat with My Custom RAG</button>
                 </div>
             </section>
 
