--- a/UI-UX/index.html
+++ b/UI-UX/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Intelligent RAG Agent</title>
+    <title>TechieMaya_Solutions</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Intelligent RAG Agent</h1>
+            <h1>TechieMaya_Solutions</h1>
             <div id="user-info" class="hidden">
                 <span id="username-display"></span>
                 <button id="logout-button">Logout</button>
@@ -111,7 +111,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2024 Intelligent RAG Solutions</p>
+            <p>&copy; 2024 TechieMaya_Solutions</p>
         </footer>
     </div>
     <script src="app.js"></script>
