added custom rag stream button

--- a/UI-UX/index.html
+++ b/UI-UX/index.html
@@ -92,6 +92,7 @@
                     <button id="chat-default-rag-button" class="nav-button hidden">Chat with Default RAG</button>
                     <button id="chat-default-rag-sse-button" class="nav-button hidden">Chat with Default RAG (Show Steps)</button>
                     <button id="chat-custom-rag-button" class="nav-button hidden">Chat with My Custom RAG</button>
+                    <button id="chat-custom-rag-sse-button" class="nav-button hidden">Chat with My Custom RAG (Show Steps)</button> <!-- New Button -->
                 </div>
             </section>
 
